--- a/mymoney/src/main/res/layout/content_main.xml
+++ b/mymoney/src/main/res/layout/content_main.xml
@@ -14,4 +14,30 @@
     android:orientation="vertical"
     >
 
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <EditText
+            android:id="@+id/et_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请输入数字"
+            />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请输入数字"
+            />
+
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
