--- a/mymoney/src/main/res/menu/navigation_menu.xml
+++ b/mymoney/src/main/res/menu/navigation_menu.xml
@@ -8,7 +8,7 @@
             android:id="@+id/navigation_item_home"
             android:checked="true"
             android:icon="@drawable/ic_home"
-            android:title="@string/navigation_home" />
+            android:title="@string/navigation_account" />
         <item
             android:id="@+id/navigation_item_category"
             android:icon="@drawable/ic_category"
