--- a/mymoney/src/main/res/layout/fragment_category.xml
+++ b/mymoney/src/main/res/layout/fragment_category.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/coordinatorLayout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-
-    <TextView
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/navigation_category"
-        />
-</LinearLayout>
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginBottom="32dp"
+        android:src="@android:drawable/ic_menu_edit"
+        app:elevation="6dp" />
+
+
+</android.support.design.widget.CoordinatorLayout>
