--- a/mymoney/src/main/res/layout/fragment_account.xml
+++ b/mymoney/src/main/res/layout/fragment_account.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/view_expense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_record"
         android:layout_width="wrap_content"
@@ -15,6 +20,5 @@
         android:layout_marginBottom="32dp"
         android:src="@android:drawable/ic_menu_edit"
         app:elevation="6dp" />
-
 
 </android.support.design.widget.CoordinatorLayout>
