--- a/mymoney/src/main/res/layout/fragment_income.xml
+++ b/mymoney/src/main/res/layout/fragment_income.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/view_expense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_record"
         android:layout_width="wrap_content"
