--- a/mymoney/src/main/res/layout/fragment_account.xml
+++ b/mymoney/src/main/res/layout/fragment_account.xml
@@ -1,15 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/coordinatorLayout"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/coordinatorLayout" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="55dp" android:fitsSystemWindows="true"
+    >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/account_total"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            android:gravity="center"
+            android:text="@string/default_num"
+            android:textColor="@color/text"
+            android:textSize="32sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="￥"
+            android:textColor="@color/text"
+            android:textSize="32sp"/>
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/view_expense"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_record"
@@ -19,6 +45,6 @@
         android:layout_margin="@dimen/fab_margin"
         android:layout_marginBottom="32dp"
         android:src="@android:drawable/ic_menu_edit"
-        app:elevation="6dp" />
+        app:elevation="6dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
