--- a/mymoney/src/main/res/layout/activity_record.xml
+++ b/mymoney/src/main/res/layout/activity_record.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <!--金额-->
     <LinearLayout
@@ -10,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_below="@id/toolbar"
-        android:background="@drawable/sel_drawer_list"
         android:gravity="right|center_vertical"
         android:orientation="horizontal">
 
@@ -21,8 +21,7 @@
             android:layout_marginRight="10dp"
             android:gravity="right|center_vertical"
             android:text="@string/default_num"
-            android:textColor="@color/red"
-            android:textSize="32sp" />
+            android:textSize="32sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,8 +29,7 @@
             android:layout_marginRight="20dp"
             android:gravity="right|center_vertical"
             android:text="￥"
-            android:textColor="@color/red"
-            android:textSize="32sp" />
+            android:textSize="32sp"/>
     </LinearLayout>
 
     <View
@@ -41,7 +39,7 @@
         android:layout_below="@id/ll_record0"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:background="@color/gray" />
+        android:background="@color/gray"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -64,9 +62,9 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="20dp"
                     android:gravity="center"
-                    android:text="@string/text_category"
+                    android:text="@string/navigation_category"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"/>
 
                 <LinearLayout
                     android:id="@+id/ll_record2"
@@ -75,7 +73,6 @@
                     android:layout_below="@id/ll_record1"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="20dp"
-                    android:background="@drawable/sel_drawer_list"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -103,7 +100,7 @@
                         android:gravity="center"
                         android:text="请选择分类"
                         android:textColor="@color/black"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -113,7 +110,7 @@
                 android:layout_below="@id/ll_record2"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:background="@color/gray" />
+                android:background="@color/gray"/>
 
             <!--账户-->
             <LinearLayout
@@ -128,9 +125,9 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="20dp"
                     android:gravity="center"
-                    android:text="@string/text_account"
+                    android:text="@string/navigation_account"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"/>
 
                 <LinearLayout
                     android:id="@+id/ll_account_record"
@@ -138,7 +135,6 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="20dp"
-                    android:background="@drawable/sel_drawer_list"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -153,7 +149,7 @@
                         android:gravity="center"
                         android:text="请选择账户"
                         android:textColor="@color/black"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"/>
 
                     <TextView
                         android:id="@+id/account_name"
@@ -163,7 +159,7 @@
                         android:paddingLeft="20dp"
                         android:text="银行卡"
                         android:textColor="@color/black"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -178,7 +174,7 @@
                             android:paddingRight="10dp"
                             android:text="@string/default_num"
                             android:textColor="@color/black"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -186,7 +182,7 @@
                             android:paddingRight="10dp"
                             android:text="￥"
                             android:textColor="@color/black"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"/>
 
                     </LinearLayout>
 
@@ -199,7 +195,7 @@
                 android:layout_below="@id/ll_record3"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:background="@color/gray" />
+                android:background="@color/gray"/>
 
             <!--时间-->
             <LinearLayout
@@ -216,7 +212,7 @@
                     android:gravity="center"
                     android:text="@string/text_datetime"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"/>
 
                 <TextView
                     android:id="@+id/text_datetime"
@@ -224,11 +220,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="20dp"
-                    android:background="@drawable/sel_drawer_list"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="2015-05-01 12:05:00"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"/>
             </LinearLayout>
 
             <View
@@ -237,7 +232,7 @@
                 android:layout_below="@id/ll_record4"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:background="@color/gray" />
+                android:background="@color/gray"/>
 
             <!--备注-->
             <LinearLayout
@@ -256,7 +251,7 @@
                     android:gravity="center"
                     android:text="备注"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"/>
 
                 <EditText
                     android:id="@+id/et_remark"
@@ -268,8 +263,7 @@
                     android:maxLength="150"
                     android:textColor="@color/black"
                     android:textColorHint="#AAAAAA"
-                    android:textCursorDrawable="@null"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
@@ -280,8 +274,10 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:background="@drawable/sel_button"
+        android:layout_margin="10dp"
+        android:background="@color/colorPrimary"
         android:text="保存"
-        android:textColor="@color/white" />
+        android:textSize="18sp"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
