--- a/mymoney/src/main/res/layout/fragment_account.xml
+++ b/mymoney/src/main/res/layout/fragment_account.xml
@@ -16,7 +16,7 @@
             android:layout_height="90dp"
             android:gravity="center"
             android:text="@string/default_num"
-            android:textColor="@color/text"
+            android:textColor="@color/white"
             android:textSize="32sp"/>
 
         <TextView
@@ -25,7 +25,7 @@
             android:layout_marginLeft="10dp"
             android:gravity="center"
             android:text="￥"
-            android:textColor="@color/text"
+            android:textColor="@color/white"
             android:textSize="32sp"/>
 
     </LinearLayout>
