--- a/mymoney/src/main/res/layout/navigation_header.xml
+++ b/mymoney/src/main/res/layout/navigation_header.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/app_name"
-        android:textColor="@color/text"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
 </LinearLayout>
