--- a/mymoney/src/main/res/values/colors.xml
+++ b/mymoney/src/main/res/values/colors.xml
@@ -7,5 +7,9 @@
     <color name="textPrimary">#212121</color>
     <color name="textSecondary">#727272</color>
     <color name="colorDivider">#B6B6B6</color>
-    <color name="text">#FFFFFF</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000</color>
+    <color name="gray">#3d3d3d</color>
+
 </resources>
