--- a/mymoney/src/main/res/layout/activity_record.xml
+++ b/mymoney/src/main/res/layout/activity_record.xml
@@ -10,7 +10,7 @@
         android:id="@+id/ll_record0"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_below="@id/toolbar"
+        android:layout_below="@id/appbar"
         android:gravity="right|center_vertical"
         android:orientation="horizontal">
 
